--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Noto+Sans+KR:wght@100;300;400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Noto+Sans+KR:wght@100;300;400;500;600&display=swap");
 @import "reset.css";
 @import "status-bar.css";
 @import "genie-list.css";
 @import "header.css";
 @import "wrap-body.css";
+@import "play-list.css";
+
+* {
+  box-sizing: border-box;
+}
 
 body {
   background-color: white;
