--- a/css/wrap-body.css
+++ b/css/wrap-body.css
@@ -1,3 +1,179 @@
-.wrap-body .TOP200 {
-  color: #0db6e5;
+.wrap-body .title {
+  padding: 20px 20px;
+}
+
+.wrap-body .title__genie-chart {
+  font-weight: 500;
+  font-size: 20px;
+}
+
+.wrap-body .title__TOP200 {
+  color: #0db6e8;
+  font-size: 18px;
+  margin-left: 2px;
+  font-weight: 600;
+}
+.wrap-body .time-part {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 13px 0px;
+  margin-right: 35px;
+  border-top: 1px solid #d9d9d9;
+}
+
+.wrap-body .time-part__chart {
+  font-size: 13px;
+  opacity: 0.7;
+  font-weight: 300;
+}
+
+.time-part .chart {
+  margin-left: 15px;
+}
+
+.time-part__clock {
+  font-size: 13px;
+  margin-left: 200px;
+  margin-right: 10px;
+}
+
+.wrap-body .top {
+  display: flex;
+  justify-content: space-between;
+  font-size: 12px;
+  opacity: 0.7;
+  padding: 10px 10px;
+  padding-left: 20px;
+  border-top: 1px solid #b2bbcb;
+  border-bottom: 1px solid #63717d;
+
+  margin-right: 35px;
+}
+
+.wrap-body__main .top__ranking {
+  padding-left: 10px;
+}
+
+.wrap-body__main .top__listening {
+  padding-left: 10px;
+}
+
+.wrap-body__main .top__add {
+  margin-left: -57px;
+}
+
+.wrap-body__main .top__song-title {
+  margin-left: -15px;
+}
+.wrap-body__main .top__artist-name {
+  padding-left: 179px;
+  padding-right: 110px;
+}
+
+.wrap-body__main .top__album-title {
+  padding: 0px 100px;
+}
+
+.wrap-body__main .top__filling {
+  padding-left: 100px;
+}
+
+.wrap-body__main .top__movie,
+.top__sharing {
+  margin-left: -30px;
+}
+
+.wrap-body__main .top__ranking-i {
+  margin-left: -30px;
+}
+
+.wrap-body .ranking {
+  display: flex;
+  align-items: center;
+  padding: 8px 10px;
+
+  margin-right: 35px;
+  border-bottom: 1px solid #e6e6e6;
+}
+
+.ranking__avatar {
+  width: 50px;
+}
+
+.ranking__number {
+  display: flex;
+  align-items: center;
+}
+
+.ranking .rank {
+  font-weight: 600;
+  font-size: 15px;
+  margin-left: 12px;
+  margin-right: 10px;
+}
+
+.ranking .ranking__avatar {
+  margin: 0px 10px;
+}
+
+.ranking .play-icon,
+.plus-icon {
+  font-size: 30px;
+  cursor: pointer;
+}
+
+.ranking .plus-icon {
+  margin-left: 5px;
+  margin-right: 16px;
+}
+
+.wrap-body .ranking i {
+  opacity: 0.5;
+}
+
+.ranking .song-title {
+  padding-left: 18px;
+  padding-right: 150px;
+  font-size: 14px;
+}
+
+.ranking .artist-name,
+.ranking .album-title {
+  padding-left: 23px;
+  font-size: 14px;
+  opacity: 0.7;
+}
+
+.ranking .click-icon {
+  padding-bottom: 4px;
+  padding-left: 5px;
+  cursor: pointer;
+}
+
+.ranking .icon {
+  font-size: 25px;
+  display: flex;
+}
+
+.ranking .filling-icon {
+  padding-left: 200px;
+  padding-right: 17px;
+}
+
+.ranking .sharing-icon {
+  padding: 0px 15px;
+}
+
+.wrap-body__left {
+  width: 1400px;
+  float: left;
+}
+
+.wrap-body__right {
+  float: right;
+  width: 300px;
+  height: 800px;
+  background-color: #888887;
+  color: #ffffff;
 }
