--- a/css/play-list.css
+++ b/css/play-list.css
@@ -3,7 +3,7 @@
   justify-content: flex-end;
   font-size: 13px;
   padding: 10px;
-  opacity: 0.8;
+  opacity: 0.5;
 }
 
 .play-list .play-list__top-icon {
@@ -32,7 +32,7 @@
 .play-list .play-list__header-main {
   display: flex;
   justify-content: space-between;
-  padding: 20px;
+  padding: 10px 20px;
 }
 .play-list .play-list__avatar {
   width: 75px;
@@ -45,4 +45,183 @@
 
 .header-main__album-info .album-title {
   margin: 7px 0px;
+}
+
+.play-list .header-bottom__lyrics {
+  padding-left: 20px;
+  font-size: 13px;
+}
+
+.header-bottom .second-line {
+  margin: 8px 0px;
+  color: #c3c3c3;
+}
+.play-list .header-bottom__control {
+  display: flex;
+  padding: 0px 10px;
+  opacity: 0.8;
+}
+
+.header-bottom .control-music {
+  background-color: white;
+  width: 60%;
+}
+
+.control .control__volume-icon {
+  display: flex;
+  align-items: center;
+  padding-left: 10px;
+  padding-right: 5px;
+  font-size: 20px;
+}
+
+.header-bottom .control-volume {
+  background-color: white;
+  width: 35%;
+}
+
+.header-bottom .header-bottom__play-time {
+  padding: 0px 18px;
+  padding-bottom: 10px;
+  font-size: 10px;
+}
+
+.header-bottom__play-time .end {
+  margin-left: 97px;
+}
+
+.play-list .header-bottom__icon {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 20px;
+  padding: 20px 8px;
+  opacity: 0.9;
+  cursor: pointer;
+}
+
+.header-bottom__icon .play {
+  font-size: 45px;
+}
+
+.header-bottom__icon .refresh,
+.random,
+.equalizer,
+.list {
+  opacity: 0.5;
+}
+
+.play-list .play-list__body {
+  background-color: #787877;
+  height: 740px;
+}
+
+.play-list .play-list__body-top {
+  display: flex;
+  justify-content: space-around;
+  padding: 13px 0px;
+  font-size: 13px;
+  border-bottom: 3px solid #8e8e8d;
+  opacity: 0.9;
+  cursor: pointer;
+}
+
+.play-list__body-border {
+  display: flex;
+  margin: 0px 30px;
+  margin-top: -3px;
+  margin-right: 160px;
+  border-bottom: 3px solid white;
+  opacity: 0.8;
+}
+
+.play-list .play-list__body-mid {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  font-size: 11px;
+  opacity: 0.6;
+  cursor: pointer;
+}
+
+.body-mid__section-search {
+  margin-left: 50px;
+  font-size: 16px;
+}
+
+.play-list .play-list__body-main {
+  padding-top: 10px;
+  margin: 0px 10px;
+  border-top: 1px solid #8e8e8d;
+  opacity: 0.9;
+}
+
+.body-main__play-list {
+  display: flex;
+  align-items: center;
+  padding: 5px 0px;
+  font-size: 13px;
+}
+
+.body-main__play-list .check-box {
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.body-main__play-list .song-title {
+  display: flex;
+  margin-left: 10px;
+}
+
+.body-main__play-list .artist {
+  margin-left: 100px;
+}
+
+.second .artist {
+  margin-left: 119px;
+}
+
+.third .artist {
+  margin-left: 64px;
+}
+
+.fourth .artist {
+  margin-left: 137px;
+}
+
+.fifth .artist {
+  margin-left: 106px;
+}
+
+.play-list .play-list__body-bottom {
+  display: flex;
+  position: fixed;
+  font-size: 13px;
+  padding: 11px;
+  border-top: 1px solid #8e8e8d;
+  bottom: 0;
+}
+
+.play-list__body-bottom i {
+  font-size: 16px;
+}
+
+.play-list__body-bottom .check-box {
+  display: flex;
+  align-items: center;
+  opacity: 0.9;
+  cursor: pointer;
+}
+
+.body-bottom .filling,
+.body-bottom .download,
+.body-bottom .delete,
+.body-bottom .add {
+  margin-left: 8.9px;
+  padding: 5px 7px;
+  border: 1px solid #8e8e8d;
+  border-radius: 25px;
+  opacity: 0.9;
+  cursor: pointer;
 }
