--- a/css/wrap-body.css
+++ b/css/wrap-body.css
@@ -18,7 +18,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 13px 0px;
-  margin-right: 35px;
+  margin: 0px 25px;
   border-top: 1px solid #d9d9d9;
 }
 
@@ -45,10 +45,9 @@
   opacity: 0.7;
   padding: 10px 10px;
   padding-left: 20px;
+  margin: 0px 25px;
   border-top: 1px solid #b2bbcb;
   border-bottom: 1px solid #63717d;
-
-  margin-right: 35px;
 }
 
 .wrap-body__main .top__ranking {
@@ -92,8 +91,7 @@
   display: flex;
   align-items: center;
   padding: 8px 10px;
-
-  margin-right: 35px;
+  margin: 0px 25px;
   border-bottom: 1px solid #e6e6e6;
 }
 
@@ -187,9 +185,9 @@
 }
 
 .fixed-bar .listening,
-.add,
-.filling,
-.download {
+.fixed-bar .add,
+.fixed-bar .filling,
+.fixed-bar .download {
   border: 1px solid #d9d9d9;
   border-radius: 20px;
   padding: 8px 10px;
