--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 @import "header.css";
 @import "wrap-body.css";
 @import "play-list.css";
+@import "big-screen.css";
 
 * {
   box-sizing: border-box;
@@ -16,4 +17,9 @@ body {
     Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", "Lobster",
     sans-serif;
   color: #27282d;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
 }
