--- a/css/wrap-body.css
+++ b/css/wrap-body.css
@@ -32,10 +32,38 @@
   margin-left: 15px;
 }
 
+.time-part__border-arrow {
+  padding: 3px 4px;
+  padding-right: 8px;
+  padding-bottom: 3px;
+  margin: 0px 10px;
+  justify-content: center;
+  font-size: 20px;
+  border: 1px solid #adb6c7;
+  border-radius: 50%;
+  opacity: 0.7;
+}
+
+.time-part__clock .right {
+  margin-right: 5px;
+}
+
 .time-part__clock {
+  display: flex;
+  align-items: center;
   font-size: 13px;
-  margin-left: 200px;
-  margin-right: 10px;
+  margin-right: 8px;
+}
+
+.time-part__clock i {
+  opacity: 0.8;
+  padding-bottom: 1px;
+  padding-left: 5px;
+}
+.time-part .click-icon {
+  display: flex;
+  align-items: center;
+  margin-left: -800px;
 }
 
 .wrap-body .top {
@@ -55,35 +83,40 @@
 }
 
 .wrap-body__main .top__listening {
-  padding-left: 10px;
+  margin-left: -17px;
 }
 
 .wrap-body__main .top__add {
-  margin-left: -57px;
+  margin-left: -86px;
 }
 
 .wrap-body__main .top__song-title {
-  margin-left: -15px;
+  margin-left: -43px;
 }
 .wrap-body__main .top__artist-name {
-  padding-left: 179px;
+  margin-left: -12px;
+  padding-left: 150px;
   padding-right: 110px;
 }
 
 .wrap-body__main .top__album-title {
-  padding: 0px 100px;
+  margin: 0px 100px;
 }
 
 .wrap-body__main .top__filling {
-  padding-left: 100px;
+  padding-left: 45px;
 }
 
-.wrap-body__main .top__movie,
-.top__sharing {
+.wrap-body__main .top__text {
+  margin-right: -30px;
+}
+
+.wrap-body__main .top__download,
+.top__movie {
   margin-left: -30px;
 }
 
-.wrap-body__main .top__ranking-i {
+.wrap-body__main .top__sharing {
   margin-left: -30px;
 }
 
@@ -136,9 +169,12 @@
   font-size: 14px;
 }
 
-.ranking .artist-name,
+.ranking .artist-name {
+  font-size: 14px;
+  opacity: 0.7;
+}
 .ranking .album-title {
-  padding-left: 23px;
+  padding-left: 46px;
   font-size: 14px;
   opacity: 0.7;
 }
@@ -155,12 +191,87 @@
 }
 
 .ranking .filling-icon {
-  padding-left: 200px;
-  padding-right: 17px;
+  margin-left: 185px;
+  padding-right: 30px;
+}
+
+.ranking .download-icon {
+  padding-right: 20px;
+}
+.ranking .movie-icon {
+  padding: 0px 10px;
 }
 
 .ranking .sharing-icon {
-  padding: 0px 15px;
+  padding-left: 20px;
+}
+
+.ranking .first-album {
+  margin-left: 4px;
+}
+
+.ranking .second-artist {
+  margin-left: 9px;
+}
+
+.ranking .second-album {
+  margin-left: 195px;
+}
+
+.ranking .second-icon {
+  margin-left: 195px;
+}
+
+.ranking .third-artist {
+  margin-left: -24px;
+}
+
+.ranking .third-album {
+  margin-left: 183px;
+}
+
+.ranking .fourth-artist {
+  margin-left: -97px;
+}
+
+.ranking .fourth-album {
+  margin-left: 235px;
+}
+
+.ranking .fourth-icon {
+  margin-left: 267px;
+}
+
+.ranking .fifth-artist {
+  margin-left: -18px;
+}
+
+.ranking .fifth-album {
+  margin-left: 143px;
+}
+
+.ranking .sixth-artist {
+  margin-left: 59px;
+}
+
+.ranking .sixth-album {
+  margin-left: 187px;
+}
+
+.ranking .sixth-icon {
+  margin-left: 192px;
+}
+
+.ranking .seventh-artist {
+  margin-left: -39px;
+}
+
+.ranking .seventh-album {
+  margin-left: 163px;
+}
+
+.ranking .seventh-icon {
+  margin-left: 230px;
 }
 
 .wrap-body__left {
